[package]
name = "athena"
version = "0.1.0"
description = "HTTP based framework for building command and control components for remote access trojans"
homepage = "https://github.com/realaravinth/athena"
repository = "https://github.com/realaravinth/athena"
documentation = "https://github.con/realaravinth/athena"
readme = "https://github.com/realaravinth/athena/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
default-run = "athena-c2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "athena-c2"
path = "./src/main.rs"

[[bin]]
name = "tests-migrate"
path = "./src/tests-migrate.rs"

[workspace]
members = [ ".", "libathena" ,"cli"]

[dependencies]
actix-web = "4.0.0-beta.8"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.8"
actix-rt = "2"
actix-cors = "0.6.0-beta.2"
actix-service = "2.0.0"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

futures = "0.3.15"

sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }

derive_builder = "0.10"
derive_more = "0.99"

config = "0.11"

serde = "1"
serde_json = "1"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"

url = "2.2"

rand = "0.8"

openssl = { version = "0.10.29", features = ["vendored"] }

libathena = {version = "*", path = "./libathena/" }

[build-dependencies]
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
