[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libathena = {version = "*", path = "../libathena/" }
clap = "3.0.0-beta.2"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = { version = "0.10.29", features = ["vendored"] }
derive_more = "0.99"
