[package]
name = "cli"
version = "0.1.0"
edition = "2018"
description = "HTTP based framework for building command and control components for remote access trojans"
homepage = "https://github.com/realaravinth/athena"
repository = "https://github.com/realaravinth/athena"
documentation = "https://github.con/realaravinth/athena"
readme = "https://github.com/realaravinth/athena/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libathena = {version = "*", path = "../libathena/" }
clap = "3.0.0-beta.2"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "fs", "macros"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = { version = "0.10.29", features = ["vendored"] }
derive_more = "0.99"
tempfile = "3.2.0"
