[package]
name = "libathena"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = "0.10.34"
url = "2.2.2"
reqwest = {version = "0.11.3", features = ["json", "cookies", "rustls-tls", "default-tls", "native-tls"]}
derive_builder = "0.10"
