[package]
name = "libathena"
version = "0.1.0"
description = "client library to interact with Athena - an HTTP framework for C2 and RAT compoenents"
homepage = "https://github.com/realaravinth/athena"
repository = "https://github.com/realaravinth/athena"
documentation = "https://github.con/realaravinth/athena"
readme = "https://github.com/realaravinth/athena/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = "0.10.34"
url = "2.2.2"
reqwest = {version = "0.11.3", features = ["json", "cookies", "rustls-tls", "default-tls", "native-tls"]}
derive_builder = "0.10"
derive_more = "0.99"
